name:                nano-log
version:             0.1.0.0
synopsis:            Collegevine's lightweight logging framework
description:         A lightweight logging framework
homepage:            https://github.com/collegevine/nano-log
license:             BSD3
license-file:        LICENSE
author:              Chris Coffey
maintainer:          chris@collegevine.com
copyright:           2016 Collegevine
category:            Interfaces
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Log.Nano
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2
                     , aeson >= 0.11.2.0
                     , lens >= 4.13
  default-language:    Haskell2010

test-suite nano-log-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nano-log
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/nano-log
